--- a/src/Components/Registration/registration.css
+++ b/src/Components/Registration/registration.css
@@ -1,16 +1,16 @@
 * {
     margin: 0;
     box-sizing: border-box;
-    font-family: "CustomFont";
 }
 
-@font-face {
+/* @font-face {
     font-family: "CustomFont";
     src: url(https://fonts.google.com/specimen/Inter);
-}
+} */
 
 body {
     background-color: #F6F6F6;
+    font-family: Inter, sans-serif;
 }
 
 .cover {
@@ -23,16 +23,24 @@ body {
 }
 
 .user-input {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     margin-top: 10px;
     border-width: 0px;
     border: 1px solid;
-    outline-style: none;
     border-radius: 7px;
     font-size: 17px;
     width: 500px;
     height: 45px;
-    padding-left: 10px;
-    padding-right: 10px;
+}
+
+.user-inputs {
+    border-width: 0px;
+    outline-style: none;
+    border-radius: 7px;
+    font-size: 17px;
+    width: 500px;
 }
 
 .login-button {
@@ -57,7 +65,8 @@ body {
     margin-left: 30px;
     margin-right: 30px;
 }
-.social{
+
+.social {
     margin-left: 30px;
     margin-right: 30px;
     margin-top: 10px;
@@ -65,12 +74,24 @@ body {
     border: 1px solid;
     outline-style: none;
     border-radius: 7px;
-    font-size: 17px;
-    width: 200px;
+    font-size: 15px;
+    width: 250px;
     height: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
-    
+    justify-content: space-evenly;
+    flex-direction: row;
 }
 
+.g-logo,
+.f-logo {
+    height: 20px;
+}
+
+.main-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
